Tue Feb  3 12:24:07 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* re.c (match_to_a): non matching element should be nil.

	* ruby.c (ruby_load_script): load script after all initialization.

	* bignum.c (str2inum): need to interpret prefix `0' of `0x'.

Tue Feb  3 10:00:18 1998  WATANABE Hirofumi  <watanabe@ase.ptg.sony.co.jp>

	* numeric.c (fix_rshift): use `sizeof(INT)*8' instead of 32.

Mon Feb  2 14:09:24 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* ruby.c (set_arg0): grab environment region too.

Thu Jan 29 18:36:25 1998  WATANABE Hirofumi  <watanabe@ase.ptg.sony.co.jp>

	* process.c (rb_proc_exec): check `sh' to be exist.

Thu Jan 29 18:18:19 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* io.c (io_stdio_set): assignment to $stdin or $stdout does
	  reopen() as well as $stderr.

Thu Jan 29 14:18:40 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* class.c (mod_ancestors): should not include singleton classes.

	* object.c (obj_type): should not return internal class.

	* io.c (io_reopen): unwillingly closes stdio streams.

Thu Jan 29 11:50:35 1998  Toshihiko SHIMOKAWA  <toshi@csce.kyushu-u.ac.jp>

	* ext/socket/socket.c (udp_addrsetup): forgot to use htons().

Tue Jan 27 23:15:24 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* keywords: __FILE__, __LINE__ are available again.

Fri Jan 23 14:19:28 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* version 1.1b6 released.

	* object.c (mod_to_s): need to duplicate classpath.

	* error.c (exc_inspect): need to duplicate classpath.

Thu Jan 22 00:37:47 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* ruby.h (STR2CSTR): new macro to retrieve char*.

	* class.c (rb_define_method): `initialize' should always be
	  private, even if it defined by C extensions.

	* eval.c (rb_eval): `initialize' should always be private.

Thu Jan 22 16:21:08 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* eval.c (rb_eval): some singleton class def cause SEGV.

	* eval.c (TMP_ALLOC): replace ALLOCA_N, where thread context